Ensure PDF page numbers are visible

--- a/packages/pdf.js/addon/styles/addon.css
+++ b/packages/pdf.js/addon/styles/addon.css
@@ -47,7 +47,7 @@ app-pdf app-pdf-icons app-pdf-icon {
 	flex:0 0 auto;
 	max-width:90px;
 	cursor:pointer;
-	font-size:24px;
+	font-size:30px;
 	font-weight:700;
 	position:relative;
 	align-items:center;
@@ -62,12 +62,14 @@ app-pdf app-pdf-icons app-pdf-icon num {
 	z-index:10;
 	width:100%;
 	height:100%;
+	color:white;
 	display:flex;
 	position:absolute;
 	align-items:center;
 	pointer-events:none;
 	flex-direction:column;
 	justify-content:center;
+	text-shadow:black 0px 0px 3px;
 }
 
 app-pdf app-pdf-icons app-pdf-icon canvas {
